Fixed issue where the incluido -no incluido text was not top aligned.

--- a/less/components/itinerario/content.less
+++ b/less/components/itinerario/content.less
@@ -54,8 +54,9 @@
         width: 49%;
         border-right: 2px solid @color-gray;
         text-align: left;
-        padding-top: 35px;
+        margin-top: 35px;
         padding-bottom: 35px;
+        vertical-align: top;
         
         &:last-child{
             padding-left: 35px;
@@ -144,7 +145,7 @@
 }
 
 .fechas-salida{
-    margin-top: 30px;
+    padding-top: 30px;
     text-align: left;
     
     ul{
